spacing fixed

--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ footer p{
 
 
     .first{
-        margin-top: 400px;
+        margin-top: 350px;
     }
 
     .first h1{
